# vslam_simulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  run.sh
src/: main.cpp  orb.cpp  orb.hpp  pose.cpp  pose.hpp  rosConsumer.cpp  rosConsumer.hpp
src/game/: game.cpp  game.hpp  player.cpp  player.hpp
src/ros/: rosPublisher.cpp  rosPublisher.hpp
test/: test_pnp.cpp
